--- a/src/app/comp/workflow-ui/workflow-ui.component.scss
+++ b/src/app/comp/workflow-ui/workflow-ui.component.scss
@@ -3,10 +3,10 @@ ul.custom-dropdown {
     overflow-y: auto;
 
     &.dropdown-330 {
-        max-width: 330px;
+        width: 330px;
     }
 
     &.dropdown-430 {
-        max-width: 430px;
+        width: 430px;
     }
 }
