--- a/src/app/comp/workflow-ui/canvas/canvas.component.html
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.html
@@ -1,6 +1,39 @@
-<div class="workflow-container">
-    <div class="overflow-visible " (mousemove)="onMouseMoveOverSvg($event)" (mouseleave)="onMouseLeaveSvg()">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+<div class="workflow-container" [ngStyle]="{ width: containerWidth + 'px', height: containerHeight + 'px' }">
+    <!-- <div class="overflow-visible" (mousemove)="onMouseMoveOverSvg($event)" (mouseleave)="onMouseLeaveSvg()"> -->
+
+    @for (node of nodes; track $index) {
+    @if(node.isAnnotation) {
+    <div class="d-inline-block position-absolute rounded element hoverable annotation" [id]="'node-block-' + node.uuid"
+        [attr.data-uuid]="node.uuid"
+        [ngStyle]="{ width: node.width + 'px', height: node.height + 'px', left: node.x + 'px', top: node.y + 142 + 'px', background: node.annotationBgColor, color: node.annotationTextColor, 'z-index': node.z}">
+        <div class="content">{{ node.annotationText }}</div>
+    </div>
+    }
+    @else {
+    <div class="d-inline-block position-absolute rounded element hoverable" [id]="'node-block-' + node.uuid"
+        [attr.data-uuid]="node.uuid"
+        [ngStyle]="{ width: node.width + 'px', 'min-height': node.height + 'px', left: node.x + 'px', top: node.y + 142 + 'px', 'z-index': node.z}">
+        @if (node.image != '') {
+        <div class="d-flex flex-column">
+            <img [src]="'assets/syshub/' + node.image + '.png'" class="mx-auto"
+                [ngStyle]="{ width: node.imagewidth + 'px', height: node.imageheight + 'px', left: node.x + 'px', top: node.y + 142 + 'px', 'z-index': node.z}">
+            <p class="mx-auto fs-7 text-center mb-0">{{ node.title }}</p>
+            @if (!node.isAnnotation && node.description && node.description.indexOf('+') === 0) {
+            <p class="mx-auto fs-7 text-center mb-0 fst-italic">{{ node.description.substring(1).trim() }}</p>
+            }
+        </div>
+        <!-- <image [attr.width]="node.imagewidth" [attr.height]="node.imageheight"
+                [attr.x]="node.x + (node.width / 2) - (node.imagewidth / 2)" [attr.y]="node.y + 2"
+                [attr.xlink:href]="'assets/syshub/' + node.image + '.png'" />
+                @if (!node.isAnnotation && node.description && node.description.indexOf('+') === 0) {
+                    <text class="proc-description" [attr.x]="node.x + (node.width / 2)"
+                        [attr.y]="node.y + node.imageheight + 32" text-anchor="middle">{{
+                        node.description.substring(1).trim() }}</text> -->
+        }
+    </div>
+    }
+    }
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
             xmlns:svgjs="http://svgjs.dev/svgjs" width="3300" height="3300" #workflowSvgContainer
             class="absolute workflow">
             <defs>
@@ -98,5 +131,5 @@
                     svgCursor.x }}, {{ svgCursor.y }}</text>
             </g>
         </svg>
-    </div>
+    </div> -->
 </div>
