--- a/src/app/comp/workflow-ui/canvas/canvas.component.scss
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.scss
@@ -12,6 +12,16 @@ $primary: #E12327;
         padding: 4px;
         border: 3px solid transparent;
 
+        &[data-has-match="true"] {
+            border-color: #16DB93;
+            background: rgba($color: #16DB93, $alpha: .1);
+        }
+
+        &[data-highlight="true"] {
+            border-color: #c1db16;
+            background: rgba($color: #c1db16, $alpha: .1);
+        }
+
         &.hoverable:hover {
             border: 3px solid red;
         }
