--- a/src/app/comp/node-inspector/wf-process-node/wf-process-node.component.html
+++ b/src/app/comp/node-inspector/wf-process-node/wf-process-node.component.html
@@ -5,7 +5,7 @@
                 <i class="bi bi-gear me-1"></i>
                 {{ l10nphrase.workflowUi.process.subject[$any(nodeItem.modeldata).isLoop === true ? 1 : 0] }}
             </div>
-            <h5 class="mb-0" [innerHTML]="nodeItem.title | highlight: searchResult?.search?.phrase"></h5>
+            <h5 class="mb-1" [innerHTML]="nodeItem.title | highlight: searchResult?.search?.phrase"></h5>
         </div>
         <div>
             <button type="button" class="btn btn-sm px-2" (click)="onChangeColor.emit()">
@@ -14,6 +14,12 @@
             <ng-content></ng-content>
         </div>
     </div>
+    @if (nodeItem.isDeprecated) {
+    <p class="mb-0 text-danger-emphasis">
+        <i class="bi bi-exclamation-diamond-fill me-1"></i>
+        {{ l10nphrase.workflowUi.process.deprecated }}
+    </p>
+    }
     <p class="mb-1 fst-italic" [innerHTML]="nodeItem.description | highlight: searchResult?.search?.phrase"></p>
     @if ($any(nodeItem.modeldata).isLoop === true) {
     <p class="mb-1">
