--- a/src/app/comp/workflow-ui/canvas/canvas.component.html
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.html
@@ -1,4 +1,5 @@
-<div class="workflow-container" [ngStyle]="{ width: containerWidth + 'px', height: containerHeight + 'px' }">
+<div #workflowContainer class="workflow-container"
+    [ngStyle]="{ width: containerWidth + 'px', height: containerHeight + 'px' }">
     <!-- <div class="overflow-visible" (mousemove)="onMouseMoveOverSvg($event)" (mouseleave)="onMouseLeaveSvg()"> -->
 
     @for (node of nodes; track $index) {
@@ -17,24 +18,44 @@
         (mouseout)="leaveNode(node)">
         @if (node.image != '') {
         <div class="d-flex flex-column">
-            <img [src]="'assets/syshub/' + node.image + '.png'" class="mx-auto"
-                [ngStyle]="{ width: node.imagewidth + 'px', height: node.imageheight + 'px', left: node.x + 'px', top: node.y + 142 + 'px', 'z-index': node.z}">
+            <div class="node-image-container mx-auto position-relative "
+                [ngStyle]="{ width: node.imagewidth + 'px', height: node.imageheight + 'px'}"
+                [attr.data-is-deprecated]="node.isDeprecated">
+                <img class="node-image" [src]="'assets/syshub/' + node.image + '.png'"
+                    [ngStyle]="{ width: node.imagewidth + 'px', height: node.imageheight + 'px'}">
+            </div>
             <p class="mx-auto fs-7 text-center mb-0">{{ node.title }}</p>
             @if (!node.isAnnotation && node.description && node.description.indexOf('+') === 0) {
             <p class="mx-auto fs-7 text-center mb-0 fst-italic">{{ node.description.substring(1).trim() }}</p>
             }
         </div>
-        <!-- <image [attr.width]="node.imagewidth" [attr.height]="node.imageheight"
-                [attr.x]="node.x + (node.width / 2) - (node.imagewidth / 2)" [attr.y]="node.y + 2"
-                [attr.xlink:href]="'assets/syshub/' + node.image + '.png'" />
-                @if (!node.isAnnotation && node.description && node.description.indexOf('+') === 0) {
-                    <text class="proc-description" [attr.x]="node.x + (node.width / 2)"
-                        [attr.y]="node.y + node.imageheight + 32" text-anchor="middle">{{
-                        node.description.substring(1).trim() }}</text> -->
         }
     </div>
     }
     }
+
+    <svg version="1.1" class="nodes-container position-absolute"
+        [ngStyle]="{ top: '0', left: '0', width: containerWidth + 'px', height: containerHeight + 'px' }"
+        [attr.width]="containerWidth" [attr.height]="containerHeight"
+        [attr.viewBox]="'0 0 ' + containerWidth + ' ' + containerHeight" xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs">
+        <defs>
+            <marker id="arrow" viewBox="0 0 10 10" refX="10" refY="5" markerWidth="4" markerHeight="4"
+                orient="auto-start-reverse" stroke="#444" fill="#444" stroke-width="1">
+                <path d="M 0 0 L 10 5 L 0 10 z" />
+            </marker>
+            <marker id="arrowred" viewBox="0 0 10 10" refX="10" refY="5" markerWidth="4" markerHeight="4"
+                orient="auto-start-reverse" stroke="#E12327" fill="#E12327" stroke-width="1">
+                <path d="M 0 0 L 10 5 L 0 10 z" />
+            </marker>
+        </defs>
+        @for (connection of graphModel.linkDataArray; track connection; let i = $index) {
+        <path [id]="'path-' + i" [attr.i]="i" [ngClass]="[connection.category ?? 'common', 'connector-path']"
+            [attr.marker-end]="hoverpath == i ? 'url(#arrowred)' : 'url(#arrow)'" (mousemove)="hoverpath = i"
+            (mouseleave)="hoverpath = undefined"></path>
+        }
+    </svg>
+
     <!-- <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
             xmlns:svgjs="http://svgjs.dev/svgjs" width="3300" height="3300" #workflowSvgContainer
             class="absolute workflow">
