--- a/src/app/comp/workflow-ui/canvas/canvas.component.scss
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.scss
@@ -39,91 +39,29 @@ $primary: #E12327;
                 white-space: pre-wrap;
             }
         }
+
+        div[data-is-deprecated="true"]::before {
+            content: '\f334';
+            font-family: bootstrap-icons;
+            font-weight: 400;
+            position: absolute;
+            top: 0;
+            right: 3px;
+            color: rgba($color: $primary, $alpha: .8);
+        }
+
     }
 
 }
 
-/* svg.workflow {
-
-    rect.annotation-box,
-    text,
-    tspan {
-        pointer-events: auto;
-    }
-
-    g.element-group {
-        stroke: none;
-
-        image {
-            cursor: pointer;
-        }
-
-        rect.annotation-box {
-            stroke-width: 1;
-            stroke: #000;
-        }
-
-        rect.proc-box {
-            cursor: pointer;
-            stroke-width: 2;
-            stroke: none;
-
-            &.has-match {
-                stroke: #16DB93;
-                fill: rgba($color: #16DB93, $alpha: .1);
-            }
-
-            &.has-highlight {
-                stroke: #c1db16;
-                fill: rgba($color: #c1db16, $alpha: .1);
-            }
-
-            &:not(.has-match):not(.has-highlight) {
-                fill: rgba($color: #efefef, $alpha: .1);
-            }
-        }
+svg.nodes-container {
+    path.connector-path {
+        stroke: #444;
+        stroke-width: 2;
+        fill: none;
 
         &:hover {
-            rect.proc-box {
-                stroke: $primary;
-                stroke-width: 2;
-            }
+            stroke: $primary;
         }
     }
-
-    g.workflow-paths {
-        path {
-            stroke: #444;
-            stroke-width: 2;
-            fill: none;
-
-            &:hover {
-                stroke-width: 3;
-                stroke: $primary;
-            }
-        }
-    }
-
-    rect.cursor {
-        fill: rgba(0, 0, 0, .5)
-    }
-
-    text.proc-description {
-        font-size: 8pt;
-        font-style: italic;
-
-        &.connector-description.error {
-            fill: $primary;
-        }
-    }
-
-    text.proc-title,
-    text.proc-loop-name {
-        font-size: 10pt;
-    }
-
-    text.ruler {
-        font-size: 6pt;
-        fill: rgba(0, 0, 0, .5);
-    }
-} */
+}
