--- a/src/app/comp/workflow-ui/canvas/canvas.component.html
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.html
@@ -64,6 +64,11 @@
         <image [attr.x]="item.x" [attr.y]="item.y" width="18" height="18" href="/findr/assets/syshub/breakpoint.svg">
         </image>
         }
+        @for (item of connectorTitles; track $index) {
+        <text [class]="['proc-description','connector-description', item.isErrorConnection ? 'error' : 'default']"
+            [attr.x]="item.x" [attr.y]="item.y" dominant-baseline="bottom" text-anchor="middle">{{ item.text
+            }}</text>
+        }
     </svg>
 
 </div>
