--- a/src/app/comp/node-inspector/wf-workflow-node/wf-workflow-node.component.html
+++ b/src/app/comp/node-inspector/wf-workflow-node/wf-workflow-node.component.html
@@ -15,6 +15,10 @@
                     <i class="bi bi-box-arrow-up-right me-1"></i>
                 </button>
             </a>
+            <button type="button" [ngClass]="{ 'btn btn-sm ps-2': true, 'text-danger': isTracingMe }"
+                (click)="traceMe()">
+                <i class="bi bi-bezier"></i>
+            </button>
             <button type="button" class="btn btn-sm px-2" (click)="onChangeColor.emit()">
                 <i class="bi bi-palette-fill"></i>
             </button>
